--- a/Packages/Application/CoSA/Resources/Private/Templates/Room/Show.html
+++ b/Packages/Application/CoSA/Resources/Private/Templates/Room/Show.html
@@ -2,12 +2,28 @@
 
 <f:section name="Title">Show room "{room.name}"</f:section>
 
+
 <f:section name="Content">
-	<table>
-		<tr>
-			<th>Name</th>
-			<td>{room.name}</td>
-		</tr>
-	</table>
+	<div style="background-image: url({f:uri.resource(path: 'pics/rooms/{backgroundImage}')}); height: 500px; width: 850px; position: relative;">
+		<div style="position:absolute; bottom: -5px; left: -70px;">
+			<img src="{f:uri.resource(path: 'pics/rooms/{cora}')}"  />
+		</div>
+		<div style="position:absolute; bottom: 240px; left: 165px; background: url({f:uri.resource(path: 'pics/rooms/{bubble}')}); height: 250px; width: 345px;">
+			<div style="margin: 60px auto; width: 215px; height: 150px;">
+				<div>
+					{room.question.text}
+				</div>
+				
+				<div style="float:left; width: 100px; margin-right: 15px;">
+					<f:link.action action="get" arguments="{room : room, answer : room.question.answer1}">{room.question.answer1.text}</f:link.action>
+				</div>
+				<div style="float:left; width: 100px;">
+					{room.question.answer2.text}
+				</div>
+			</div>
+		</div>
+	</div>
+	
+	
 	<f:link.action action="index">Back</f:link.action>
 </f:section>
